# rudu

./: .gitignore  .rustc_info.json  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  README.md  test_cache_disable_demo.rs  test_cache_root.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust_check.yml
benches/: README.md  memory_benchmark.rs  overhead_benchmark.rs  profiling.rs  scan_benchmark.rs  thread_pool_benchmark.rs  work_stealing_benchmark.rs
docs/: INSTALLATION.md  basic-usage.md  exclude_tutorial.md  performance.md  rudu_factsheet.md
examples/: cache_demo.rs  memory_monitor_demo.rs  test_cache_disable_demo.rs
notes/: BASELINE_PROFILE.md  BENCHMARKS.md  Development_plan.md  PERFORMANCE_OPTIMIZATIONS.md  SCAN_OPTIMIZATION_SUMMARY.md  THREAD_POOL_IMPLEMENTATION.md  WORK_STEALING_IMPLEMENTATION.md
src/: cli.rs  data.rs  lib.rs  main.rs  memory.rs  metrics.rs  scan.rs  thread_pool.rs  utils.rs
src/cache/: README.md  mod.rs  model.rs  tests.rs
src/output/: csv.rs  mod.rs  terminal.rs
tests/: integration_tests.rs  output_render.rs  output_renderers.rs  util.rs  utils.rs
