[package]
name = "rudu"
version = "1.1.0"
authors = ["Sam Green"]
edition = "2021"
repository = "https://github.com/greensh16/rudu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
rayon = "1"
humansize = "2"
libc = "0.2"
globset = "0.4"
indicatif = "0.17"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dashmap = "5"