[package]
name = "rudu"
version = "1.4.0"
authors = ["Sam Green"]
edition = "2024"
repository = "https://github.com/greensh16/rudu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1"
humansize = "2"
libc = "0.2"
globset = "0.4"
indicatif = "0.17"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
dashmap = "6.1"
num_cpus = "1.16"
memmap2 = "0.9"
serde_json = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.10"
parking_lot = "0.12"

[profile.release]
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
jemalloc-ctl = "0.5"
walkdir = "2.5"
# Memory benchmarking - using criterion fork with memory tracking
# criterion-memtrack = { git = "https://github.com/jemalloc/criterion-memtrack" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
procfs = "0.16"

[[bench]]
name = "scan_benchmark"
harness = false

[[bench]]
name = "profiling"
harness = false

[[bench]]
name = "thread_pool_benchmark"
harness = false

[[bench]]
name = "work_stealing_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[[bench]]
name = "overhead_benchmark"
harness = false
